media: AVDA now doesn't queue EOS for a flush if the codec is empty

Apparently some MediaCodecs consider it an error to receive an EOS
buffer as their first input. So now we skip queueing the EOS if there
are no pending buffers in the decoder and no pending inputs.

BUG=672268
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2563533002
Cr-Commit-Position: refs/heads/master@{#437436}

Former-commit-id: 89afd26f42c7a417841e1657499f5216262906d2